application/k8s/notification.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: notification
  name: notification
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "notification-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: notification
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: notification
  template:
    metadata:
      labels:
        deployment.name: notification
    spec:
      containers:
      - name: notification
        #local:
        image: notification
        #Production:
        #image: gitlab.lnu.se:5050/2dv013/student/ma225gn/part2-architecture/taskit/application/notification:latest
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
