application/k8s/taskit.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: taskit
  name: taskit
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "task-it-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: taskit
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskit
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: taskit
  template:
    metadata:
      labels:
        deployment.name: taskit
    spec:
      containers:
      - name: taskit
        #local:
        image: taskit
        #Production:
        #image: gitlab.lnu.se:5050/2dv013/student/ma225gn/part2-architecture/taskit/application/taskit:latest
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
