application/k8s/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: '*.lnu.se'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskit
                port:
                  number: 8888
